<resources>
    <string name="app_name">iAM</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="erase">&lt;</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="delete">Delete</string>
    <string name="cancel_small_button">Cancel</string>
    <string name="retry">Retry</string>
    <string name="error_no_internet_title">Cannot Connect to Internet</string>
    <string name="error_no_internet">Please check your Internet connection and your settings then try again.</string>
    <string name="error_server_title">Cannot Connect to Server</string>
    <string name="error_server">The server you’re trying to connect to is currently unavailable, please try again later.</string>
    <string name="error_login_title">Log In Error</string>
    <string name="error_login_inactive">An error occurred during login. It could happen if you\'re having internet connection issues or if you logged in Covr from other device. Please try to re-login by restarting Covr or by setting up again.</string>
    <string name="error_login_request_error">An error occurred during login. \nError code: %d</string>
    <string name="error_login_generic">An error occurred during login.</string>
    <string name="error_unauthorized">An account with the same phone number is activated on another device.</string>
    <string name="error_http_unauthorized">Error 401</string>
    <string name="error_rooted_device">We are sorry. iAM can not be installed on a Rooted device.</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="welcome_label">Welcome to</string>
    <string name="tut1_label">Welcome to Covr</string>
    <string name="tut1_text">The safest digital authentication\nsystem on Earth</string>
    <string name="tut2_label">Safe</string>
    <string name="tut2_text">Protection against password and ID theft,\n phishing, skimming, and credit card\nhijacking</string>
    <string name="tut3_label">Easy</string>
    <string name="tut3_text">Verify transactions and access to your\naccounts with your personal code,\nright on your phone</string>
    <string name="tut4_label">Protection</string>
    <string name="tut4_text">The only multi-factor, double channel\nencryption system on the market</string>
    <string name="tut5_label">Get started</string>
    <string name="tut5_text">Pair and connect to our Partners</string>
    <string name="tut1_desc1">Prove who you are \nwith iAM digital \nidentity.</string>
    <string name="tut1_desc2">Use iAM to identify yourself as you would any other ID documentation.</string>
    <string name="tut1_desc3">No passwords are needed. Get safe and quick access to services with QR code login.</string>
    <string name="tut2_desc1">Stay secure and be in \ncontrol of your personal \ninformation.</string>
    <string name="tut2_desc2">With iAM, you always know what information you share, when, and with whom.</string>
    <string name="tut2_desc3">iAM safeguards your identity with ultra-strong encryption.</string>
    <string name="tut3_desc1">Create your first ID and begin \nusing iAM by following a few \nsimple steps.</string>
    <string name="tut3_desc2">Let\'s get started.</string>
    <string name="tut3_desc3"></string>
    <string name="tut4_desc1">Terms of Use and \nPrivacy Policy.</string>
    <string name="tut4_desc2_1">Terms of Use /</string>
    <string name="tut4_desc2_2">&#160; and &#160; </string>
    <string name="tut4_desc2_3">Privacy Policy</string>
    <string name="tut4_desc3">By continuing the setup I accept the \nTerms of Use and Privacy Policy.</string>
    <string name="terms_of_use_string">Terms of Use</string>
    <string name="privacy_policy_string">Privacy Policy.</string>
    <string name="description_empty"> </string>
    <string name="button_setup_iam">Create your ID</string>
    <string name="tutorial_back_arrow">Previous</string>
    <string name="tutorial_next_arrow">Next</string>
    <string name="tutorial_start_arrow">Start</string>
    <string name="tutorial_fragment_delete">Delete</string>
    <string name="recover_iam">Restore your ID</string>
    <string name="please_scan_the_qr_code_from_the_recovery">Please scan the QR Code from the recovery</string>
    <string name="open_settings_to_grant_permission_to_take_qr">Open settings to grant permission to scan qr code</string>
    <string name="set_up_recovery">Set up recovery</string>
    <string name="recovery_set_up_success">Recovery set up success</string>
    <string name="use_biometric_recovery">Use biometric recovery</string>
    <string name="your_biometric_data_will_be_registered_for_account_recovery">Your biometric data will be registered for account recovery</string>
    <string name="cancel_recovery_dialog_title">Do You Want to Cancel the Recovery?</string>
    <string name="setup_cancel_button">Cancel set-up</string>
    <string name="setup_continue_button">Continue</string>
    <string name="cancel_dialog_message">You will not be able to save your progress.</string>
    <string name="cancel_setup_dialog_title">Do You Want to Cancel the Set-up?</string>
    <string name="enter_personal_code">Please enter your Personal Code.</string>
    <string name="status_sent_sms">Processing SMS</string>
    <string name="status_fail_to_sent_sms">SMS failed to send</string>
    <string name="status_delivered_to_inbox">SMS sent to your messaging inbox</string>
    <string name="qr_code_title">Scan QR code to begin \nsetting up your ID.</string>
    <string name="qr_code_description1">The app will ask you for permission to use the camera to scan the QR code.</string>
    <string name="qr_code_description2">Tap the "QR Scan" button below to begin the registration process.</string>
    <string name="phone_number_done">Done</string>
    <string name="phone_number_close">Close</string>
    <string name="phone_number_edit">Edit</string>
    <string name="phone_number_confirmation_one_title">Phone Number Verification</string>
    <string name="phone_number_confirmation_one">You have entered the number\n%1$s \n\nIs this correct?</string>
    <string name="phone_number_header">Enter your phone number</string>
    <string name="phone_number_subheader">To verify the identity of your phone, Covr will send you a verification code via SMS. Enter your phone number below. Read more\u00A0></string>
    <string name="phone_number_read_more">Read more\u00A0></string>
    <string name="phone_number_hint">phone number</string>
    <string name="error_sending_sms_title">Error Delivering SMS</string>
    <string name="error_sending_sms_no_certificates">Your operating system does not contain required ssl certificates.</string>
    <string name="error_sending_sms">SMS could not be delivered.</string>
    <string name="info_enter_code_header">You are about to choose your iAM Code.</string>
    <string name="info_enter_code_text">From now on you will use this code to verify and deny requests. You will not be able to recover this code if you forget it. Read more\u00A0></string>
    <string name="info_enter_change_code_text">You will need to enter your current iAM Code before you can change it. Read more\u00A0></string>
    <string name="verification_try_again">try again</string>
    <string name="verification_header">Enter 4-digit verification code</string>
    <string name="verification_explanation">An SMS has been sent to your messaging inbox. This can take up to a minute. If you do not receive an SMS, press \"try again\". Read more\u00A0></string>
    <string name="verification_icorrect_title">Incorrect Code!</string>
    <string name="verification_icorrect_text">The verification code you entered is incorrect. Please check the code you received by SMS and try again.</string>
    <string name="verification_icorrect_captcha_text">Something went wrong during reCaptcha. Please try again.</string>
    <string name="verification_sms_status">Status: %s</string>
    <string name="help">Help</string>
    <string name="help_how_to_add_partnership">How to add a Connection?</string>
    <string name="help_what_is_partnership">What is a Connection?</string>
    <string name="help_topics">Help topics</string>
    <string name="help_support">Support</string>
    <string name="help_support_chat">Chat with support</string>
    <string name="help_support_if_you_have_issues">If you have any issues, please contact us. Be aware that the response time to your questions can vary depending on region. Read more\u00A0></string>
    <string name="help_tos_placeholder">Text for Terms and Conditions will be outlined in a separate document.</string>
    <string name="help_what_is_partnership_text">@string/help_tos_placeholder</string>
    <string name="help_how_to_add_partnership_text">@string/help_tos_placeholder</string>
    <string name="about">About iAM</string>
    <string name="about_version">Version: %1$s</string>
    <string name="about_copyright">Copyright \u00A9 %d, Covr Security.\nAll rights  reserved.</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="fingerprint_auth_ready_title">Use fingerprint?</string>
    <string name="fingerprint_auth_ready_description"><![CDATA[You have set up fingerprint for your device, do you want to use that for your PIN Code? You can turn this On or Off later in iAM settings. %s]]></string>
    <string name="covr_vault_payment_card_edit_my_description_title">my description</string>
    <string name="covr_vault_payment_card_edit_information_as_on_card_title">information as on card</string>
    <string name="covr_vault_payment_card_edit_issued_by_title">issued by</string>
    <string name="covr_vault_payment_card_edit_customer_service_number_title">customer service number</string>
    <string name="covr_vault_payment_card_edit_notes_title">notes</string>
    <string name="covr_vault_payment_card_edit_my_description_edit_hint"><i>Description Required</i></string>
    <string name="covr_vault_payment_card_edit_issued_by_edit_hint"><i>Enter name bank or organization…</i></string>
    <string name="covr_vault_payment_card_edit_customer_service_number_edit_hint"><i>Enter ph.number to customer service…</i></string>
    <string name="covr_vault_payment_card_edit_notes_edit_hint"><i>Enter content…</i></string>
    <string name="covr_vault_payment_card_edit_full_name_label">Full Name</string>
    <string name="covr_vault_payment_card_edit_full_name_edit_hint"><i>Enter name as on card…</i></string>
    <string name="covr_vault_payment_card_edit_card_number_label">Card Number</string>
    <string name="covr_vault_payment_card_edit_card_number_edit_hint"><i>Enter card number…</i></string>
    <string name="covr_vault_payment_card_edit_exp_date_label">Exp. Date</string>
    <string name="covr_vault_payment_card_edit_exp_date_edit_hint"><i>MM/YY</i></string>
    <string name="covr_vault_payment_card_edit_cvv_number_label">CVV Number</string>
    <string name="covr_vault_payment_card_edit_cvv_number_edit_hint"><i>Enter CVV number…</i></string>
    <string name="locked_screen_header_text">Your iAM app has been permanently locked.</string>
    <string name="locked_screen_main_text">All data, history and connections has been securely deleted. There is absolutely NO possibility these can be retrieved again.\n\nYou have to start from the beginning by performing a new set-up of Covr and adding all connections all over again.</string>
    <string name="play_protect_warning_message_singular_intro">A potentially harmful app has been detected:</string>
    <string name="play_protect_warning_message_singular_ending">It should be uninstalled for safe usage of the iAM application.</string>
    <string name="play_protect_warning_dialog_title">Security warning</string>
</resources>