<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.covrsecurity.io.R" />

        <import type="com.covrsecurity.io.utils.CardType" />

        <variable
            name="toolbarModel"
            type="com.covrsecurity.io.model.databinding.ToolbarModel" />

        <variable
            name="paymentCardModel"
            type="com.covrsecurity.io.model.databinding.PaymentCardEditModel" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/covr_vault_edit_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/covr_vault_edit_toolbar"
            layout="@layout/toolbar_binding"
            bind:toolbarModel="@{toolbarModel}" />

        <ScrollView
            android:id="@+id/payment_card_edit_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/payment_card_edit_scroll_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/payment_card_edit_card_card_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    bind:srcCardType="@{paymentCardModel.cardType}"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:focusableInTouchMode="true"
                    android:text="@{paymentCardModel.cardType != null ? paymentCardModel.cardType.cardIssuer: CardType.UNKNOWN.cardIssuer}"
                    android:textColor="@color/covr_green"
                    android:textSize="17sp" />

                <View style="@style/payment_card_edit_information_divider" />

                <TextView
                    style="@style/payment_card_edit_header"
                    android:text="@string/covr_vault_payment_card_edit_my_description_title" />

                <View style="@style/payment_card_edit_information_divider" />

                <com.covrsecurity.io.ui.view.CopyMonitoringEditText
                    android:id="@+id/description_edit"
                    style="@style/payment_card_edit_edit_text"
                    android:hint="@string/covr_vault_payment_card_edit_my_description_edit_hint"
                    android:maxLength="@integer/payment_card_edit_description_max_length"
                    android:nextFocusDown="@+id/full_name_edit"
                    android:text="@={paymentCardModel.description}"
                    bind:nextEditText="@{fullNameEdit}"
                    bind:underlineColor="@{R.color.transparent}" />

                <View style="@style/payment_card_edit_information_divider" />

                <TextView
                    style="@style/payment_card_edit_header"
                    android:text="@string/covr_vault_payment_card_edit_information_as_on_card_title" />

                <View style="@style/payment_card_edit_information_divider" />

                <RelativeLayout style="@style/payment_card_edit_information_content">

                    <TextView
                        android:id="@+id/payment_card_edit_full_name_label"
                        style="@style/payment_card_edit_information_label"
                        android:text="@string/covr_vault_payment_card_edit_full_name_label" />

                    <EditText
                        android:id="@+id/full_name_edit"
                        style="@style/payment_card_edit_information_edit"
                        android:layout_toEndOf="@+id/payment_card_edit_full_name_label"
                        android:hint="@string/covr_vault_payment_card_edit_full_name_edit_hint"
                        android:maxLength="@integer/payment_card_edit_full_name_max_length"
                        android:nextFocusDown="@+id/card_number_edit"
                        android:text="@={paymentCardModel.fullName}"
                        bind:nextEditText="@{cardNumberEdit}"
                        bind:underlineColor="@{R.color.transparent}" />

                    <View style="@style/payment_card_edit_information_divider" />

                </RelativeLayout>

                <RelativeLayout style="@style/payment_card_edit_information_content">

                    <TextView
                        android:id="@+id/payment_card_edit_card_number_label"
                        style="@style/payment_card_edit_information_label"
                        android:text="@string/covr_vault_payment_card_edit_card_number_label" />

                    <EditText
                        android:id="@+id/card_number_edit"
                        style="@style/payment_card_edit_information_edit"
                        android:layout_toEndOf="@+id/payment_card_edit_card_number_label"
                        android:digits="0123456789 "
                        android:hint="@string/covr_vault_payment_card_edit_card_number_edit_hint"
                        android:inputType="phone"
                        android:nextFocusDown="@+id/exp_date_edit"
                        android:text="@={paymentCardModel.cardNumber}"
                        bind:nextEditText="@{expDateEdit}"
                        bind:underlineColor="@{R.color.transparent}"
                        tools:ignore="TextFields" />

                    <View style="@style/payment_card_edit_information_divider" />

                </RelativeLayout>

                <RelativeLayout style="@style/payment_card_edit_information_content">

                    <TextView
                        android:id="@+id/payment_card_edit_exp_date_label"
                        style="@style/payment_card_edit_information_label"
                        android:text="@string/covr_vault_payment_card_edit_exp_date_label" />

                    <com.covrsecurity.io.ui.view.BlockedSelectionZanyEditText
                        android:id="@+id/exp_date_edit"
                        style="@style/payment_card_edit_information_edit"
                        android:layout_toEndOf="@+id/payment_card_edit_exp_date_label"
                        android:digits="0123456789/"
                        android:hint="@string/covr_vault_payment_card_edit_exp_date_edit_hint"
                        android:inputType="phone"
                        android:maxLength="@integer/payment_card_edit_exp_date_max_length"
                        android:nextFocusDown="@+id/cvv_number_edit"
                        android:text="@={paymentCardModel.expDate}"
                        bind:nextEditText="@{cvvNumberEdit}"
                        bind:underlineColor="@{R.color.transparent}"
                        tools:ignore="TextFields" />

                    <View style="@style/payment_card_edit_information_divider" />

                </RelativeLayout>

                <RelativeLayout style="@style/payment_card_edit_information_content">

                    <TextView
                        android:id="@+id/payment_card_edit_cvv_number_label"
                        style="@style/payment_card_edit_information_label"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/covr_vault_payment_card_edit_cvv_number_label" />

                    <EditText
                        android:id="@+id/cvv_number_edit"
                        style="@style/payment_card_edit_information_edit"
                        android:layout_toEndOf="@+id/payment_card_edit_cvv_number_label"
                        android:hint="@string/covr_vault_payment_card_edit_cvv_number_edit_hint"
                        android:inputType="phone"
                        android:digits="0123456789"
                        android:maxLength="@integer/payment_card_edit_cvv_number_max_length"
                        android:nextFocusDown="@+id/issued_by_edit"
                        android:text="@={paymentCardModel.cvvNumber}"
                        bind:nextEditText="@{issuedByEdit}"
                        bind:underlineColor="@{R.color.transparent}"
                        tools:ignore="TextFields" />

                </RelativeLayout>

                <View style="@style/payment_card_edit_information_divider" />

                <TextView
                    style="@style/payment_card_edit_header"
                    android:text="@string/covr_vault_payment_card_edit_issued_by_title" />

                <View style="@style/payment_card_edit_information_divider" />

                <com.covrsecurity.io.ui.view.CopyMonitoringEditText
                    android:id="@+id/issued_by_edit"
                    style="@style/payment_card_edit_edit_text"
                    android:hint="@string/covr_vault_payment_card_edit_issued_by_edit_hint"
                    android:maxLength="@integer/payment_card_edit_issued_by_max_length"
                    android:nextFocusDown="@+id/phone_number_edit"
                    android:text="@={paymentCardModel.bankName}"
                    bind:nextEditText="@{phoneNumberEdit}"
                    bind:underlineColor="@{R.color.transparent}" />

                <View style="@style/payment_card_edit_information_divider" />

                <TextView
                    style="@style/payment_card_edit_header"
                    android:text="@string/covr_vault_payment_card_edit_customer_service_number_title" />

                <View style="@style/payment_card_edit_information_divider" />

                <EditText
                    android:id="@+id/phone_number_edit"
                    style="@style/payment_card_edit_edit_text"
                    android:digits="0123456789+"
                    android:hint="@string/covr_vault_payment_card_edit_customer_service_number_edit_hint"
                    android:inputType="phone"
                    android:maxLength="@integer/payment_card_edit_phone_number_max_length"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/notes_edit"
                    android:text="@={paymentCardModel.phoneNumber}"
                    bind:nextEditText="@{notesEdit}"
                    bind:underlineColor="@{R.color.transparent}"
                    tools:ignore="TextFields" />

                <View style="@style/payment_card_edit_information_divider" />

                <TextView
                    style="@style/payment_card_edit_header"
                    android:text="@string/covr_vault_payment_card_edit_notes_title" />

                <View style="@style/payment_card_edit_information_divider" />

                <com.covrsecurity.io.ui.view.CopyMonitoringEditText
                    android:id="@+id/notes_edit"
                    style="@style/payment_card_edit_edit_text"
                    android:gravity="top"
                    android:hint="@string/covr_vault_payment_card_edit_notes_edit_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="3"
                    android:maxLength="@integer/payment_card_edit_notes_max_length"
                    android:singleLine="false"
                    android:text="@={paymentCardModel.notes}"
                    bind:underlineColor="@{R.color.transparent}" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>
