<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="setupCovrListener"
            type="android.view.View.OnClickListener" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/topbar_logo_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/view_padding_small"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo_large_green" />

        <TextView
            android:id="@+id/header_text"
            fontPath="@string/cfg_font_avenir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/main_text"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/thirty_dp"
            android:layout_marginStart="@dimen/thirty_dp"
            android:gravity="center_horizontal"
            android:text="@string/locked_screen_header_text"
            android:textColor="@color/covr_green"
            android:textSize="@dimen/text_header_personal_code_info" />

        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/twenty_four_dp"
            android:layout_marginStart="@dimen/twenty_four_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:gravity="center_horizontal"
            android:text="@string/locked_screen_main_text"
            android:textColor="@color/covr_green"
            android:textSize="@dimen/text_regular" />

        <Button
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:onClick="@{setupCovrListener}"
            android:text="@string/button_setup_iam" />

    </RelativeLayout>

</layout>