<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="useFingerprint"
            type="java.lang.Boolean" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:padding="@dimen/view_padding_big"
            android:src="@drawable/ic_fingerprint_big_green" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/view_padding_half_big"
            android:text="@string/fingerprint_auth_ready_title"
            android:textColor="@color/covr_green"
            android:textSize="@dimen/text_header" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/view_padding_half_big"
            android:textColor="@color/white"
            android:textColorHighlight="@android:color/transparent"
            android:textColorLink="@color/clickable_text"
            android:textSize="@dimen/text_regular"
            tools:text="@string/fingerprint_auth_ready_description" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/use_fingerprint_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/radio_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={useFingerprint}"
                    android:text="@string/yes"
                    android:textColor="@color/covr_green"
                    android:textSize="@dimen/text_header_small" />

                <RadioButton
                    android:id="@+id/radio_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/covr_green"
                    android:textSize="@dimen/text_header_small" />

            </RadioGroup>

        </FrameLayout>

    </LinearLayout>

</layout>